--- a/app/src/main/res/drawable/vertical_progress.xml
+++ b/app/src/main/res/drawable/vertical_progress.xml
@@ -4,7 +4,7 @@
 
         <shape>
             <corners android:radius="8dp"/>
-            <solid android:color="#ECF0F1" />
+            <solid android:color="#808080" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
