--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -21,7 +21,7 @@
         android:layout_below="@+id/textView2"
         android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/login_button"
