--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -20,14 +20,14 @@
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_menu_manage"
             android:title="Help" />
+        <item
+            android:id="@+id/nav_contact"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Contact Us" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Details">
         <menu>
-            <item
-                android:id="@+id/nav_contact"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Contact Us" />
 
             <item
                 android:id="@+id/nav_logout"
