--- a/app/src/main/res/menu/bottom_navigation_item.xml
+++ b/app/src/main/res/menu/bottom_navigation_item.xml
@@ -6,16 +6,20 @@
         android:icon="@drawable/ic_menu_gallery"
         android:title="@string/title_current_mission" />
 
-    <item
-        android:id="@+id/navigation_locator"
-        android:icon="@drawable/ic_menu_camera"
-        android:title="@string/title_locator" />
+    <!--<item-->
+        <!--android:id="@+id/navigation_locator"-->
+        <!--android:icon="@drawable/ic_menu_camera"-->
+        <!--android:title="@string/title_locator" />-->
+
+    <!--<item-->
+        <!--android:id="@+id/navigation_stats"-->
+        <!--android:icon="@drawable/ic_menu_send"-->
+        <!--android:title="@string/title_stats" />-->
 
     <item
-        android:id="@+id/navigation_stats"
-        android:icon="@drawable/ic_menu_send"
-        android:title="@string/title_stats" />
-
+        android:id="@+id/navigation_duel"
+        android:title="Duel"
+        android:icon="@drawable/ic_menu_camera"/>
     <item
         android:id="@+id/navigation_leaderboard"
         android:icon="@drawable/ic_menu_share"
