--- a/app/src/main/res/layout/fragment_locator.xml
+++ b/app/src/main/res/layout/fragment_locator.xml
@@ -20,7 +20,9 @@
         app:layout_constraintEnd_toStartOf="@+id/hot_cold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="16dp">
 
     </FrameLayout>
 
@@ -38,7 +40,8 @@
         android:progressDrawable="@drawable/vertical_progress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="32dp" />
 
 
 
