--- a/app/src/main/res/layout/activity_dashboard_loot.xml
+++ b/app/src/main/res/layout/activity_dashboard_loot.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.dell.loot.DashboardLoot">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/action_bar"
         android:elevation="4dp"
@@ -18,11 +21,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+
+
     </android.support.v7.widget.Toolbar>
 
 
+    </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="16dp"
@@ -30,6 +37,8 @@
         android:background="@drawable/name_score"
         android:elevation="5dp"
         android:fadingEdge="none"
+        app:layout_anchor="@+id/toolbar2"
+        app:layout_anchorGravity="top|center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -53,19 +62,10 @@
             android:paddingBottom="8dp"
             android:text="$20"
             android:textSize="20sp" />
-
     </RelativeLayout>
 
 
-    <RelativeLayout
-        android:id="@+id/main_content"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2">
+
 
         <FrameLayout
             android:id="@+id/frame_container"
@@ -73,35 +73,19 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_above="@+id/space"
-            android:layout_margin="@dimen/fab_margin"
-            app:fabSize="auto"
-            android:src="@drawable/ic_group_collapse_00" />
 
+    <com.luseen.spacenavigation.SpaceNavigationView
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:active_item_color="@android:color/black"
+        app:centre_button_color="@android:color/white"
+        app:inactive_item_color="@android:color/black"
+        app:space_background_color="@color/yellow500"
+        app:centre_button_icon="@mipmap/ic_launcher"
+        app:space_item_icon_size="36dp"
+        app:space_item_icon_only_size="40dp"
+        app:space_item_text_size="20sp" />
 
-        <com.luseen.spacenavigation.SpaceNavigationView
-            android:id="@+id/space"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_alignParentBottom="true"
-            app:active_item_color="@android:color/black"
-            app:centre_button_color="@android:color/white"
-            app:inactive_item_color="@android:color/black"
-            app:space_background_color="@color/yellow500"
-            app:centre_button_icon="@mipmap/ic_launcher"
-            app:space_item_icon_size="36dp"
-            app:space_item_icon_only_size="40dp"
-            app:space_item_text_size="20sp" />
-
-
-    </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
