--- a/app/src/main/res/layout/fragment_missions.xml
+++ b/app/src/main/res/layout/fragment_missions.xml
@@ -29,7 +29,7 @@ THis is the mission..The first Misssiom"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/gangsta"
+        android:background="@drawable/background_e1"
         app:layout_constraintEnd_toStartOf="@+id/mission_desc"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
