users and missions api: updated api changes and bug fixes

--- a/app/src/main/res/drawable/vertical_progress.xml
+++ b/app/src/main/res/drawable/vertical_progress.xml
@@ -4,7 +4,8 @@
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="8dp"/>
-            <solid android:color="#808080" />
+            <solid android:color="@color/space_transparent" />
+            <stroke android:color="@color/space_white" android:width="8dp"/>
         </shape>
     </item>
 
@@ -12,14 +13,11 @@
         <layer-list>
             <item>
                 <clip
-                    android:clipOrientation="vertical"
-                    android:gravity="bottom">
+                   >
                     <shape>
                         <corners android:radius="8dp"/>
-                        <gradient
-                            android:angle="90"
-                            android:endColor="#FF0000"
-                            android:startColor="#1341EA" />
+                        <solid android:color="@color/space_white" />
+                        <stroke android:color="@color/space_transparent" android:width="8dp"/>
                     </shape>
                 </clip>
             </item>
