--- a/app/src/main/res/layout/fragment_duel.xml
+++ b/app/src/main/res/layout/fragment_duel.xml
@@ -94,8 +94,8 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
         android:scaleType="fitXY"
         android:src="@drawable/dan_xxhdpi"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,12 +109,12 @@
         android:layout_height="162dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/d_box"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.42000002">
 
 
         <TextView
@@ -133,17 +133,21 @@
 
     <ImageButton
         android:id="@+id/loot"
-        android:layout_width="104dp"
+        android:layout_width="85dp"
         android:layout_height="52dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="90dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/card_background_yellow"
         android:scaleType="fitXY"
         android:src="@drawable/loot_box"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mission_desc" />
+        app:layout_constraintTop_toBottomOf="@+id/mission_desc"
+        app:layout_constraintVertical_bias="0.375" />
 
 
 </android.support.constraint.ConstraintLayout>
